# ewdns

./: README.md  main.c  meson.build
.github/workflows/: meson_test.yaml
src/: dnsecho.c  dnsproxy.c  epoll.c  epoll.h  udp.c  udp.h  utils.c  utils.h
tests/: dnsproxy_tests.c  udp_test.c  utils_test.c
